--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 </header>
 
 
-<img src ="static\images\cover.png">
+<img src ="static\images\coverpic.png">
 
 
 <section class="text-gray-600 body-font">
